fix(orga): align label vertically when the authentication method is mediacentre in the popup

--- a/orga/app/styles/components/manage-authentication-method-modal.scss
+++ b/orga/app/styles/components/manage-authentication-method-modal.scss
@@ -108,7 +108,12 @@
   &__subTitle {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 16px;
+
+    &--mediacentre {
+      margin-bottom: 0;
+    }
 
     .green-icon {
       color: $pix-success-70;
